<resources>
    <string name="app_name">pruebav5</string>
    <string name="robotinfo">RobotInfo</string>
    <string name="activities">Actividades</string>
    <string name="prueba_robosonit_5">Prueba Robosonit 5</string>
    <string name="informaci_n_de_carga">Información de carga</string>
    <string name="informaci_n_del_dispositivo">Información del dispositivo</string>
    <string name="bateria_restante">Bateria restante</string>
    <string name="error_en_la_conexion">Error en la conexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prueba_de_dictado">Prueba de dictado</string>
    <string name="introduzca_su_mensaje">Introduzca su mensaje</string>
    <string name="comenzar">Comenzar</string>
    <string name="parar">Parar</string>
    <string name="movimiento">Movimiento</string>
    <string name="movimiento_cabeza">Movimiento Cabeza</string>
    <string name="subir">Subir</string>
    <string name="izquierda">Izquierda</string>
    <string name="derecha">Derecha</string>
    <string name="bajar">Bajar</string>
    <string name="avanzar">Avanzar</string>
    <string name="retroceder">Retroceder</string>
</resources>