<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ActivitiesFragment"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/label_dictado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prueba_de_dictado" />
    <EditText
        android:id="@+id/et_dictado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/introduzca_su_mensaje"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_comenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comenzar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_parar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/parar"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</LinearLayout>