<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robotinfo"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/main_fragment"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_movimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movimiento"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_cabeza_movimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movimiento_cabeza"
            android:layout_weight="1"/>



    </LinearLayout>


</LinearLayout>